<resources>

    <string name="app_name">Blacklist Unwanted</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Blacklist Unwanted</string>

  <string name="hello">Get Circle of any Mobile Number</string>
   
    <string name="mobile_number_hint">Enter Mobile Number</string>
	<string name="button_ok">Submit</string>
	<string name="MCDatabase_onUpdate">"
	    DROP TABLE IF NOT EXISTS circle_operator
	    DROP TABLE IF NOT EXISTS circles
	    DROP TABLE IF NOT EXISTS operators
	"</string>
	<string name="txt_block_incomming_call">Block Incomming Call</string>
	<string name="txt_scedule_block_incomming_call">Schedule Block Incomming Call</string>
	<string name="txt_block_outgoinging_call">Block Outgoing Call</string>
	<string name="txt_scedule_block_outgoing_call">Schedule Block Outgoing Call</string>
	<string name="txt_block_incomming_sms">Block Incomming Sms</string>
	<string name="txt_scedule_block_incomming_sms">Schedule Block Incomming Sms</string>
	<string name="txt_block_outgoing">Block Outgoing Sms</string>
	<string name="txt_scedule_block_outgoing_sms">Schedule Block Outgoing Sms</string>
	<string name="btn_start_time">Start time</string>
	<string name="btn_end_time">End Time</string>
	<color name="view_background_color">#8dc43f</color>
</resources>